{
    "name": "GamePlayInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "bb880e7b-7174-4ef8-961e-652239449d82",
            "actions": [
                {
                    "name": "Touch0Position",
                    "type": "Value",
                    "id": "31686684-c61e-4d1e-a5b0-c44a675e5e91",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1Position",
                    "type": "Value",
                    "id": "1b214fba-a383-4dc7-813a-8ba77e06e42a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch0Pressed",
                    "type": "Button",
                    "id": "981e2785-0149-4f91-828d-90dfe841a4b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch1Pressed",
                    "type": "Button",
                    "id": "d66cb4b7-4a31-4a62-a0d6-075711843f38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch0Delta",
                    "type": "Value",
                    "id": "f6887a13-9361-4c1c-bac4-efd93fa6fd37",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch0Click",
                    "type": "Button",
                    "id": "515e9cf0-2fda-423d-b378-7259605ced2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "91abb63a-3d87-4c00-8d19-cf0e0e2eec69",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "694130a9-8208-46c8-a411-6b622d8c0792",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42979fd9-24a4-4024-8dc5-b8d9b95f4dc8",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "254b7d2b-739b-4b9f-ae6b-966c16e7021b",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fba2b013-e85f-4aa2-80a2-63967f2f141f",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7298f08a-bf00-4951-b9a0-93876a5e0f52",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}